--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 launch.json
 settings.json
-__pycache__/PostgreSQLManager.cpython-37.pyc
-__pycache__/app.cpython-37.pyc
+__pycache__/
 postgre-password.txt
+models/__pycache__/
+logs.txt
